--- a/templates/base.html
+++ b/templates/base.html
@@ -1,16 +1,34 @@
 <!DOCTYPE html>
 
 <html>
-    {% block title_block %}
+
         <title>
             Rate My Rating!
+             {% block title_block %}
+             {% endblock % }
         </title>
-    {% endblock %}
 
-     <body>
-    {% block body_block %}
+        <!-- These are all the links at the top of the website -->
+        <a href="{% url 'index' %}">Home</a></li>
+        <a href="{% url 'about' %}">About</a></li>
+        <a href="{% url 'all' %}">All</a></li>
 
-    {% endblock %}
-     </body>
+
+        <!-- Give users different options for signing in/out depending on if they're authenticated -->
+
+        {% if user.is_authenticated %}
+            <a href="{% url 'sign_out' %}">Sign Out</a></li>
+        {% else %}
+            <a href="{% url 'login' %}">Login</a></li>
+            <a href="{% url 'register' %}">Register</a></li>
+
+
+
+    <body>
+        <div>
+        {% block body_block %}
+        {% endblock %}
+        </div>
+   </body>
 
 </html>
