--- a/templates/index.html
+++ b/templates/index.html
@@ -1,9 +1,14 @@
 <!DOCTYPE html>
+
+
+<html>
 {% extends 'base.html' %}
     {% block title_block %}
-        Index
+        Home
     {% endblock %}
 
     {% block body_block %}
-        Welcome to our website!
+
     {% endblock %}
+
+</html>
