--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,89 @@
         Home
     {% endblock %}
 
+
+
     {% block body_block %}
+
+        Top Websites
+        <br>
+        {% for website, websiteInfo in topWebsites.items %}
+            Name:
+            {{ website.name }}
+            <br>
+
+            Url:
+            {{ website.url }}
+            <br>
+
+
+            Date Posted:
+            {{ website.published }}
+            Number of ratings:
+            {{ websiteInfo.0 }}
+            <br>
+
+            Average rating:
+            {{ websiteInfo.1 }}
+            <br>
+            <br>
+        {% endfor %}
+
+            <br>
+            <br>
+
+
+        Trending websites
+        <br>
+        {% for website, websiteInfo in trendingWebsites.items %}
+            Name:
+            {{ website.name }}
+            <br>
+
+            Url:
+            {{ website.url }}
+            <br>
+
+
+            Date Posted:
+            {{ website.published }}
+            Number of ratings:
+            {{ websiteInfo.0 }}
+            <br>
+
+            Average rating:
+            {{ websiteInfo.1 }}
+            <br>
+            <br>
+        {% endfor %}
+        <br>
+        <br>
+
+
+
+        New websites
+        <br>
+        {% for website, websiteInfo in newWebsites.items %}
+            Name:
+            {{ website.name }}
+            <br>
+
+            Url:
+            {{ website.url }}
+            <br>
+
+
+            Date Posted:
+            {{ website.published }}
+            Number of ratings:
+            {{ websiteInfo.0 }}
+            <br>
+
+            Average rating:
+            {{ websiteInfo.1 }}
+            <br>
+            <br>
+        {% endfor %}
 
     {% endblock %}
 
