--- a/templates/base.html
+++ b/templates/base.html
@@ -10,7 +10,7 @@
 
         <!-- These are all the links at the top of the website -->
         <a href="{% url 'index' %}">Home</a></li>
-
+        <a href="{% url 'about' %}">About</a></li>
 
     <body>
         <div>
