--- a/templates/base.html
+++ b/templates/base.html
@@ -3,7 +3,15 @@
 <html>
 
         <title>
-            Rate My Rating!
+
+            This is Rate My Rating!
+
+            {% if user.is_authenticated %}
+            Welcome,{{ user.username }}!
+            {% else %}
+            Welcome, please Login!
+            {% endif %}
+
              {% block title_block %}
              {% endblock %}
         </title>
@@ -11,6 +19,16 @@
         <!-- These are all the links at the top of the website -->
         <a href="{% url 'index' %}">Home</a></li>
         <a href="{% url 'about' %}">About</a></li>
+        <!-- Check login status, shows differnt links -->
+        {% if user.is_authenticated %}
+        <a href="{% url 'restricted' %}">Restricted Page</a></li>
+        <a href="{% url 'logout' %}">Logout</a></li>
+        {% else %}
+        <a href="{% url 'login' %}">Sign In</a></li>
+        <a href="{% url 'register' %}">Sign Up</a></li>
+        {% endif %}
+
+
 
     <body>
         <div>
