--- a/templates/base.html
+++ b/templates/base.html
@@ -2,32 +2,60 @@
 
 <html>
 
-        <title>
+    <head>
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+            integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+            crossorigin="anonymous">
+    </head>
 
-            This is Rate My Rating!
+    <title>
 
-            {% if user.is_authenticated %}
-            Welcome,{{ user.username }}!
-            {% else %}
-            Welcome, please Login!
-            {% endif %}
+        This is Rate My Rating!
 
-             {% block title_block %}
-             {% endblock %}
-        </title>
-
-        <!-- These are all the links at the top of the website -->
-        <a href="{% url 'index' %}">Home</a></li>
-        <a href="{% url 'about' %}">About</a></li>
-        <!-- Check login status, shows differnt links -->
         {% if user.is_authenticated %}
-        <a href="{% url 'restricted' %}">Restricted Page</a></li>
-        <a href="{% url 'logout' %}">Logout</a></li>
+        Welcome,{{ user.username }}!
         {% else %}
-        <a href="{% url 'login' %}">Sign In</a></li>
-        <a href="{% url 'register' %}">Sign Up</a></li>
+        Welcome, please Login!
         {% endif %}
 
+        {% block title_block %}
+        {% endblock %}
+
+    </title>
+
+    <!--Using some bootstrap style deploy NavBar-->
+    <nav class="navbar navbar-light navbar-expand-lg" style="background-color: #e3f2fd;">
+
+        <!--Home page button-->
+        <a class="navbar-brand" href="{% url 'index' %}">Rate my Rating</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+
+            <!--clickable buttons with login status check-->
+            <div class="navbar-nav">
+                <a class="nav-item nav-link" href="{% url 'index' %}">Home</a>
+                <a class="nav-item nav-link" href="{% url 'about' %}">About</a>
+                {% if user.is_authenticated %}
+                    <a class="nav-item nav-link" href="{% url 'restricted' %}">Restricted Page</a></li>
+                    <a class="nav-item nav-link" href="{% url 'logout' %}">Logout</a></li>
+                {% else %}
+                    <a class="nav-item nav-link" href="{% url 'login' %}">Sign In</a></li>
+                    <a class="nav-item nav-link" href="{% url 'register' %}">Sign Up</a></li>
+                {% endif %}
+            </div>
+
+            <!--Search Box(Doesn't work now)-->
+            <div>
+                <form class="form-inline my-2 my-lg-0">
+                    <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+                    <button class="btn btn-outline-info my-2 my-sm-0" type="submit">Search</button>
+                </form>
+            </div>
+
+        </div>
+    </nav>
 
 
     <body>
