--- a/templates/login.html
+++ b/templates/login.html
@@ -6,12 +6,15 @@
 {% endblock %}
 
 {% block body_block %}
-    <h1>Login to Rango</h1>
+    <h1>Login to Rate my rating</h1>
+    <strong>Login</strong><br />
     <form id="login_form" method="post" action="{% url 'login' %}">
         {% csrf_token %}
         Username: <input type="text" name="username" value="" size="50" />
         <br />
+        <br />
         Password: <input type="password" name="password" value="" size="50" />
+        <br />
         <br />
         <input type="submit" value="Login" />
     </form>
