--- a/templates/base.html
+++ b/templates/base.html
@@ -10,14 +10,7 @@
 
     <title>
 
-        This is Rate My Rating!
-
-        {% if user.is_authenticated %}
-        Welcome,{{ user.username }}!
-        {% else %}
-        Welcome, please Login!
-        {% endif %}
-
+        Rate My Rating -
         {% block title_block %}
         {% endblock %}
 
@@ -38,8 +31,9 @@
                 <div class="navbar-nav">
                     <a class="nav-item nav-link" href="{% url 'index' %}">Home</a>
                     <a class="nav-item nav-link" href="{% url 'about' %}">About</a>
+                    <a class="nav-item nav-link" href="{% url 'websites' %}">All</a>
                     {% if user.is_authenticated %}
-                        <a class="nav-item nav-link" href="{% url 'restricted' %}">Restricted Page</a></li>
+                        <a class="nav-item nav-link" href="{% url 'my_account' %}">My Account</a></li>
                         <a class="nav-item nav-link" href="{% url 'logout' %}">Logout</a></li>
                     {% else %}
                         <a class="nav-item nav-link" href="{% url 'login' %}">Sign In</a></li>
@@ -49,8 +43,8 @@
 
                 <!--Search Box(Doesn't work now)-->
                 <div>
-                    <form class="form-inline my-2 my-lg-0">
-                        <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+                    <form method="GET" action="{% url 'websites' %}" class="form-inline my-2 my-lg-0">
+                        <input name="search" class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
                         <button class="btn btn-outline-info my-2 my-sm-0" type="submit">Search</button>
                     </form>
                 </div>
@@ -58,10 +52,21 @@
             </div>
         </nav>
 
-        <div>
-        {% block body_block %}
-        {% endblock %}
+        <div class="container">
+            {% for message in messages %}
+            <div class="alert {{ message.tags }} alert-dismissible" role="alert">
+                <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+                </button>
+                {{ message }}
+            </div>
+            {% endfor %}
+            {% block body_block %}
+            {% endblock %}
         </div>
+
+        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
    </body>
 
 </html>
