--- a/templates/register.html
+++ b/templates/register.html
@@ -1,5 +1,6 @@
 {% extends 'base.html' %}
 {% load staticfiles %}
+{% load crispy_forms_tags %}
 
 {% block title_block %}
     Sign up
@@ -16,8 +17,8 @@
 
         {% csrf_token %}
         <!-- Display each form -->
-        {{ user_form.as_p }}
-        {{ profile_form.as_p }}
+        {{ user_form|crispy }}
+        {{ profile_form|crispy }}
         <!-- Provide a button to click to submit the form. -->
         <input type="submit" name="submit" value="Sign up" />
     </form>
