--- a/templates/login.html
+++ b/templates/login.html
@@ -18,4 +18,7 @@
         <br />
         <input type="submit" value="Login" />
     </form>
+    <br>
+    <p><strong>-- OR --</strong></p>
+    <a href="{% url 'social:begin' 'google-oauth2' %}">Login with Google</a>
 {% endblock %}
