--- a/templates/webapp/login.html
+++ b/templates/webapp/login.html
@@ -1,5 +1,6 @@
-{% extends 'base.html' %}
+{% extends 'webapp/base.html' %}
 {% load staticfiles %}
+{% load crispy_forms_tags %}
 
 {% block title_block %}
     Login
@@ -8,14 +9,9 @@
 {% block body_block %}
     <h1>Login to Rate my rating</h1>
     <strong>Login</strong><br />
-    <form id="login_form" method="post" action="{% url 'login' %}">
+    <form method="post" action="{% url 'login' %}">
         {% csrf_token %}
-        Username: <input type="text" name="username" value="" size="50" />
-        <br />
-        <br />
-        Password: <input type="password" name="password" value="" size="50" />
-        <br />
-        <br />
+        {{ form|crispy }}
         <input type="submit" value="Login" />
     </form>
     <br>
