--- a/templates/webapp/my-account.html
+++ b/templates/webapp/my-account.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends 'webapp/base.html' %}
 {% load staticfiles %}
 
 {% block title_block %}
@@ -38,13 +38,13 @@
         </div>
         <div class="col-4">
             <h1>My account</h1>
-            {% if current_user.userprofile.picture %}
-                <img height="250px" src="{{ current_user.userprofile.picture.url }}" alt="Profile Picture"/>
+            {% if user.userprofile.picture %}
+                <img height="250px" src="{{ user.userprofile.picture.url }}" alt="Profile Picture"/>
             {% else %}
                 <img height="250px" src="https://dummyimage.com/600x400/ffffff/727596.png&text=No+profile+picture+available" alt="No profile picture available"/>
             {% endif %}
-            <h2>{{ current_user.username }}</h2>
-            <h4># of contributions: {{ num_websites }}<h4>
+            <h2>{{ user.username }}</h2>
+            <h4># of contributions: {{ websites.count }}<h4>
             <a href="{% url 'my_account_edit' %}">Edit account</a>
             <a class="btn btn-primary" href="{% url 'my_account_upload' %}">Upload new website</a>
         </div>
