--- a/templates/webapp/base.html
+++ b/templates/webapp/base.html
@@ -6,6 +6,52 @@
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
             integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
             crossorigin="anonymous">
+
+        <style>
+            .aboutContainer{
+                display: flex;
+                flex-flow: row wrap;
+                justify-content: space-around;
+            }
+            .aboutContainer > * {
+                padding: 10px;
+            }
+            .aboutHeading{
+                color: #003366;
+                font-size: 45px;
+            }
+            .whatDoWeDo{
+                text-align: left;
+                margin: 20px;
+            }
+            .description{
+                text-align: center;
+                margin: 20px;
+            }
+            #MrPresident{
+                width: 100%;
+                height: 100%;
+            }
+            .photo{
+                display: flex;
+                flex-direction: row;
+                justify-content: center;
+                margin-left: 20px;
+                margin-right: 20px;
+            }
+        </style>
+
+        <script>
+            function onClick() {
+                var x = document.getElementById("displayOnClick");
+                if (x.style.display === "none") {
+                    x.style.display = "block";
+                } else {
+                    x.style.display = "none";
+                }
+            }
+        </script>
+
     </head>
 
     <title>
