--- a/templates/webapp/base.html
+++ b/templates/webapp/base.html
@@ -1,67 +1,19 @@
 <!DOCTYPE html>
+{% load staticfiles %}
 
 <html>
-
     <head>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
             integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
             crossorigin="anonymous">
+        <link rel="stylesheet" href="{% static "css/global.css" %}">
 
-        <style>
-            .aboutContainer{
-                display: flex;
-                flex-flow: row wrap;
-                justify-content: space-around;
-            }
-            .aboutContainer > * {
-                padding: 10px;
-            }
-            .aboutHeading{
-                color: #003366;
-                font-size: 45px;
-            }
-            .whatDoWeDo{
-                text-align: left;
-                margin: 20px;
-            }
-            .description{
-                text-align: center;
-                margin: 20px;
-            }
-            #MrPresident{
-                width: 100%;
-                height: 100%;
-            }
-            .photo{
-                display: flex;
-                flex-direction: row;
-                justify-content: center;
-                margin-left: 20px;
-                margin-right: 20px;
-            }
-        </style>
-
-        <script>
-            function onClick() {
-                var x = document.getElementById("displayOnClick");
-                if (x.style.display === "none") {
-                    x.style.display = "block";
-                } else {
-                    x.style.display = "none";
-                }
-            }
-        </script>
-
+        <title>
+            Rate My Rating -
+            {% block title_block %}
+            {% endblock %}
+        </title>
     </head>
-
-    <title>
-
-        Rate My Rating -
-        {% block title_block %}
-        {% endblock %}
-
-    </title>
-
     <body>
         <!--Using some bootstrap style deploy NavBar-->
         <nav class="navbar navbar-light navbar-expand-lg" style="background-color: #e3f2fd;">
@@ -113,6 +65,7 @@
 
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+        {% block script_block %}
+        {% endblock %}
    </body>
-
 </html>
