--- a/templates/webapp/website_details.html
+++ b/templates/webapp/website_details.html
@@ -7,6 +7,19 @@
 {% endblock %}
 
 {% block body_block %}
+    <div id="rating_success" class="alert alert-success collapse" role="alert">
+        <button type="button" class="close">
+            <span aria-hidden="true">&times;</span>
+        </button>
+        <strong>Thank you for your feedback!</strong> The rating has been updated.
+    </div>
+    <div id="rating_error" class="alert alert-danger collapse" role="alert">
+        <button type="button" class="close">
+            <span aria-hidden="true">&times;</span>
+        </button>
+        <strong>Something went wrong.</strong> The rating could not been updated.
+    </div>
+
     <div class="row">
         <div class="col-6">
             <h2>{{ website.name }}</h2>
@@ -26,30 +39,38 @@
         </div>
         <div class="col-6">
             <h3>Average rating<h3>
-            <h4>{{ website.average_rating }}/5</h4>
+            <h4><span id="average_rating">{{ website.average_rating }}</span>/5</h4>
             
-            {% if rating_form %}
-            <form method="post">
-                {% csrf_token %}
-                {{ rating_form|crispy }}
-                <button class="btn btn-primary" type="submit">Rate</button>
-            </form>
+            {% if user.is_authenticated and user == website.owner %}
+            <div>You cannot rate your own website.</div>
+            {% elif user.is_authenticated %}
+            <div class='rating-stars text-center'>
+                <ul id='stars'>
+                    <li class='star' title='Terrible' data-value='1'><i class='fa fa-star fa-fw'></i></li>
+                    <li class='star' title='Bad' data-value='2'><i class='fa fa-star fa-fw'></i></li>
+                    <li class='star' title='Average' data-value='3'><i class='fa fa-star fa-fw'></i></li>
+                    <li class='star' title='Good' data-value='4'><i class='fa fa-star fa-fw'></i></li>
+                    <li class='star' title='Excellent' data-value='5'><i class='fa fa-star fa-fw'></i></li>
+                </ul>
+            </div>  
             {% else %}
             <div>You have to be logged in to rate websites.</div>
             {% endif %}
 
             {% if ratings %}
             <h4>Latest ratings:</h4>
-            {% for rating in ratings %}
-                <div class="card">
-                    Rating: {{ rating.rating }}
-                    <br>
-                    User: {{ rating.user }}
-                </div>
-            {% endfor %}
-            {% else %}
-                <h4>No ratings so far. Be the first to rate this website!</h4>
-            {% endif %}
+            <div id="latest_ratings">
+                {% for rating in ratings %}
+                    <div class="card">
+                        Rating: {{ rating.rating }}
+                        <br>
+                        User: {{ rating.user }}
+                    </div>
+                {% endfor %}
+                {% else %}
+                    <h4>No ratings so far. Be the first to rate this website!</h4>
+                {% endif %}
+            </div>
         </div>
     </div>
     <div class="row">
@@ -77,4 +98,13 @@
     {% else %}
         <h4>No comments so far. Be the first one!</h4>
     {% endif %}
+{% endblock %}
+
+{% block script_block %}
+    <script type="text/javascript">
+        var rating_ajax_url = '{% url "website_update_rating" website.slug %}';
+        var csrf_token = '{{ csrf_token }}';
+        var current_rating = {{ current_rating }};
+    </script>
+    <script src="{% static "js/website_detail.js" %}" type="text/javascript"></script>
 {% endblock %}
