--- a/templates/webapp/base.html
+++ b/templates/webapp/base.html
@@ -27,10 +27,20 @@
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
 
                 <!--clickable buttons with login status check-->
-                <div class="navbar-nav">
+                <div class="navbar-nav mr-auto">
                     <a class="nav-item nav-link" href="{% url 'index' %}">Home</a>
                     <a class="nav-item nav-link" href="{% url 'websites' %}">All</a>
                     <a class="nav-item nav-link" href="{% url 'about' %}">About</a>
+                </div>
+
+                <div class="navbar-nav ml-auto mr-auto">
+                    <form method="GET" action="{% url 'websites' %}" class="form-inline my-2 my-lg-0">
+                        <input name="search" class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+                        <button class="btn btn-outline-info my-2 my-sm-0" type="submit">Search</button>
+                    </form>
+                </div>
+
+                <div class="navbar-nav ml-auto">
                     {% if user.is_authenticated %}
                         <a class="nav-item nav-link" href="{% url 'my_account' %}">My Account</a></li>
                         <a class="nav-item nav-link" href="{% url 'logout' %}">Logout</a></li>
@@ -38,13 +48,6 @@
                         <a class="nav-item nav-link" href="{% url 'login' %}">Sign In</a></li>
                         <a class="nav-item nav-link" href="{% url 'register' %}">Sign Up</a></li>
                     {% endif %}
-                </div>
-
-                <div>
-                    <form method="GET" action="{% url 'websites' %}" class="form-inline my-2 my-lg-0">
-                        <input name="search" class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-                        <button class="btn btn-outline-info my-2 my-sm-0" type="submit">Search</button>
-                    </form>
                 </div>
 
             </div>
