--- a/static/css/global.css
+++ b/static/css/global.css
@@ -29,3 +29,16 @@
     margin-left: 20px;
     margin-right: 20px;
 }
+.signInUp{
+    width: 33%;
+    margin-left: 33%;
+    text-align: center;
+}
+#Title{
+    margin-top: 40px;
+    margin-bottom: 30px;
+    text-align: center;
+}
+#information{
+    text-align: left;
+}
