--- a/templates/webapp/register.html
+++ b/templates/webapp/register.html
@@ -7,17 +7,21 @@
 {% endblock %}
 
 {% block body_block %}
-    <h1>Register for Rate my Rating</h1>
+<h1 id="Title">Register for Rate my Rating</h1>
+<div class="signInUp">
     <strong>Sign up</strong><br />
-    <form method="post" action="{% url 'register' %}" enctype="multipart/form-data">
+    <form id="information" method="post" action="{% url 'register' %}" enctype="multipart/form-data">
         {% csrf_token %}
         <!-- Display each form -->
         {{ user_form|crispy }}
         {{ profile_form|crispy }}
         <!-- Provide a button to click to submit the form. -->
-        <input type="submit" value="Sign up" />
+        <div style="text-align: center">
+            <button type="submit" class="btn btn-primary">Sign Up</button>
+        </div>
     </form>
     <br>
     <p><strong>-- OR --</strong></p>
     <a href="{% url 'social:begin' 'google-oauth2' %}">Login with Google</a>
+</div>
 {% endblock %}
