some minor changes

--- a/templates/webapp/about.html
+++ b/templates/webapp/about.html
@@ -13,6 +13,11 @@
             Everything About Rate my Rating
         </div>
 
+        <div class="teamMember" id="Title">
+            <h3>This project has been made by Lab12 Team E</h3>
+            <h3>Haowen Li / Eerik Saksi / David Jasek / Mahmood Khalil</h3>
+        </div>
+
         <div class="whatDoWeDo">
             Our goal in this web application is to allow users to upload and rate websites with ratings on them.
             For example, a website that allowed users to rate books and compare them with other books would be suitable to upload on to our webapp, users could then rate this website and comment on it.
