--- a/static/css/global.css
+++ b/static/css/global.css
@@ -35,6 +35,7 @@
     text-align: center;
 }
 #Title{
+    color: #003366;
     margin-top: 40px;
     margin-bottom: 30px;
     text-align: center;
