--- a/templates/webapp/base.html
+++ b/templates/webapp/base.html
@@ -19,7 +19,7 @@
         <nav class="navbar navbar-light navbar-expand-lg" style="background-color: #e3f2fd;">
 
             <!--Home page button-->
-            <a class="navbar-brand" href="{% url 'index' %}">Rate my Rating</a>
+            <a class="navbar-brand" href="{% url 'index' %}" style="font-style: oblique">Rate my Rating</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -30,6 +30,16 @@
                     <a class="nav-item nav-link" href="{% url 'index' %}">Home</a>
                     <a class="nav-item nav-link" href="{% url 'websites' %}">All</a>
                     <a class="nav-item nav-link" href="{% url 'about' %}">About</a>
+                </div>
+
+                <div class="searchBox" style="margin-left:5px;">
+                    <form method="GET" action="{% url 'websites' %}" class="form-inline my-2 my-lg-0">
+                        <input name="search" class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+                        <button class="btn btn-outline-info my-2 my-sm-0" type="submit">Search</button>
+                    </form>
+                </div>
+
+                <div class="navbar-nav">
                     {% if user.is_authenticated %}
                         <a class="nav-item nav-link" href="{% url 'my_account' %}">My Account</a></li>
                         <a class="nav-item nav-link" href="{% url 'logout' %}">Logout</a></li>
@@ -37,14 +47,6 @@
                         <a class="nav-item nav-link" href="{% url 'login' %}">Sign In</a></li>
                         <a class="nav-item nav-link" href="{% url 'register' %}">Sign Up</a></li>
                     {% endif %}
-                </div>
-
-                <!--Search Box(Doesn't work now)-->
-                <div>
-                    <form method="GET" action="{% url 'websites' %}" class="form-inline my-2 my-lg-0">
-                        <input name="search" class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-                        <button class="btn btn-outline-info my-2 my-sm-0" type="submit">Search</button>
-                    </form>
                 </div>
 
             </div>
