--- a/static/css/global.css
+++ b/static/css/global.css
@@ -89,3 +89,11 @@
     margin-top: 40px;
     margin-bottom: 10px;
 }
+.detail-thumnail {
+    width: 100%;
+}
+.inline-star {
+    display: inline-block;
+    color: #ffcc36;
+
+}
