--- a/templates/webapp/my-account-edit.html
+++ b/templates/webapp/my-account-edit.html
@@ -13,7 +13,9 @@
             <form method="post">
                 {% csrf_token %}
                 {{ password_form|crispy }}
-                <button class="btn btn-primary" type="submit">Change password</button>
+                <div class="text-center">
+                    <button class="btn btn-primary" type="submit">Change password</button>
+                </div>
             </form>
         </div>
         <div class="col-5 offset-2">
@@ -22,7 +24,9 @@
                 {% csrf_token %}
                 {{ user_form|crispy }}
                 {{ profile_form|crispy }}
-                <button class="btn btn-primary" type="submit">Update account details</button>
+                <div class="text-center">
+                    <button class="btn btn-primary" type="submit">Update account details</button>
+                </div>
             </form>
         </div>
     </div>
