--- a/templates/webapp/my-account-upload.html
+++ b/templates/webapp/my-account-upload.html
@@ -7,9 +7,15 @@
 {% endblock %}
 
 {% block body_block %}
-    <form method="post" enctype="multipart/form-data">
-        {% csrf_token %}
-        {{ form|crispy }}
-        <button class="btn btn-primary" type="submit">Upload</button>
-    </form>
+    <h1 id="Title">Upload new rating website</h1>
+    <div class="col-6 offset-3">
+        <form method="post" enctype="multipart/form-data">
+            {% csrf_token %}
+            {{ form|crispy }}
+            <div style="text-align: center">
+                <button type="submit" class="btn btn-primary">Upload</button>
+            </div>
+        </form>
+        <br>
+    </div>
 {% endblock %}
