--- a/templates/webapp/my-account.html
+++ b/templates/webapp/my-account.html
@@ -7,36 +7,35 @@
 
 {% block body_block %}
     <div class="row">
-        <div class="col-8">
-            <h2>Overall average rating</h2>
-            <h2>{{ average_rating }}/5</h2>
+        <div class="col-lg-8 col-m-12">
+            <div class="card p-3 text-center shadow-sm">
+                <h2>Overall average rating</h2>
+                <h2>{{ average_rating }}/5</h2>
+            </div>
             {% for website in websites %}
-            <div class="card">
+            <div class="card p-3 shadow-sm">
                 <div class="row">
-                    <div class="col-6">
+                    <div class="col-lg-8 col-m-12">
                         <table>
-                            <tr><td>Website:</td><td>{{ website.name }}</td></tr>
-                            <tr><td>Description:</td><td>{{ website.description }}</td></tr>
-                            <tr><td>Rating:</td><td>{{ website.average_rating }}</td></tr>
-                            <tr><td>Uploaded on:</td><td>{{ website.published }}</td></tr>
-                            <tr>
-                                <td><a href="{% url 'website_detail' website.slug %}">Website detail</a></td>
-                                <td><a href="{% url 'website_edit' website.slug %}">Edit website</a></td>
-                            </tr>
+                            <tr><td colspan="2"><h4>{{ website.name }}</h4></td></tr>
+                            <tr><td class="pr-2 font-weight-bold">Rating:</td><td>{{ website.average_rating }}</td></tr>
+                            <tr><td class="pr-2 font-weight-bold">Uploaded on:</td><td>{{ website.published }}</td></tr>
+                            <tr><td colspan="2"><a class="mt-2 btn btn-primary" href="{% url 'website_detail' website.slug %}">Website detail</a></td></tr>
+                            <tr><td colspan="2"><a class="mt-2 btn btn-outline-info" href="{% url 'website_edit' website.slug %}">Edit website</a></td></tr>
                         </table>
                     </div>
-                    <div class="col-6">
+                    <div class="col-lg-4 col-m-12">
                         {% if website.thumbnail%}
-                            <img height="150px" src="{{ website.thumbnail.url }}" alt="Webstie thumbnail"/>
+                            <img class="detail-thumnail" src="{{ website.thumbnail.url }}" alt="Website thumbnail"/>
                         {% else %}
-                            <img height="150px" src="https://dummyimage.com/600x400/ffffff/727596.png&text=No+thumbnail+available" alt="No thumbnail available"/>
+                            <img class="detail-thumnail" src="https://dummyimage.com/600x400/ffffff/727596.png&text=No+thumbnail+available" alt="No thumbnail available"/>
                         {% endif %}
                     </div>
                 </div>
             </div>
             {% endfor %}
         </div>
-        <div class="col-4">
+        <div class="col-lg-3 offset-lg-1 col-m-12">
             <h1>My account</h1>
             {% if user.userprofile.picture %}
                 <img height="250px" src="{{ user.userprofile.picture.url }}" alt="Profile Picture"/>
@@ -45,8 +44,11 @@
             {% endif %}
             <h2>{{ user.username }}</h2>
             <h4># of contributions: {{ websites.count }}<h4>
-            <a href="{% url 'my_account_edit' %}">Edit account</a>
-            <a class="btn btn-primary" href="{% url 'my_account_upload' %}">Upload new website</a>
+            <div class="text-center">
+                <a class="btn btn-primary mt-2" href="{% url 'my_account_upload' %}">Upload new website</a>
+                <br>
+                <a class="btn btn-outline-info mt-2" href="{% url 'my_account_edit' %}">Edit account</a>
+            </div>
         </div>
     </div>
 {% endblock %}
