--- a/static/css/global.css
+++ b/static/css/global.css
@@ -5,7 +5,7 @@
 }
 
 .aboutContainer > * {
-    padding: 10px;
+    padding: 1%;
 }
 
 .aboutHeading{
@@ -15,12 +15,12 @@
 
 .whatDoWeDo{
     text-align: left;
-    margin: 20px;
+    margin: 1%;
 }
 
 .description{
     text-align: center;
-    margin: 20px;
+    margin: 1%;
 }
 
 #MrPresident{
@@ -32,8 +32,8 @@
     display: flex;
     flex-direction: row;
     justify-content: center;
-    margin-left: 20px;
-    margin-right: 20px;
+    margin-left: 1%;
+    margin-right: 1%;
 }
 
 .rating-stars ul {
@@ -69,15 +69,15 @@
 }
 #Title{
     color: #003366;
-    margin-top: 40px;
-    margin-bottom: 30px;
+    margin-top: 3%;
+    margin-bottom: 2%;
     text-align: center;
 }
 #information{
     text-align: left;
 }
 .card{
-    margin: 10px;
+    margin: 1%;
 }
 .Top, .Trending, .New{
     display: flex;
@@ -86,8 +86,8 @@
 }
 .indexTitle{
     text-align: center;
-    margin-top: 40px;
-    margin-bottom: 20px;
+    margin-top: 5%;
+    margin-bottom: 2%;
 }
 .footer{
     background-color: #e3f2fd;
